Add method to set timer

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     <title>Code Quiz</title>
 </head>
 <body>
+       
     <div class="container">
         <h1>Coding Quiz Challenge</h1>
+        <h2>Time: <span id="timerCountdown">0</span></h2>
         <p> Try to answer the following code-related questions within the time limit allowed. Keep in mind that incorrect answers will penalize your score time by ten (10) seconds</p>
         <button id="start">Start Quiz</button>
     </div>
+    
+   
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
